--- a/app/views/partials/sidebar.html
+++ b/app/views/partials/sidebar.html
@@ -4,10 +4,11 @@
 	<section class="sidebar">
 		<!-- sidebar menu: : style can be found in sidebar.less -->
 		<ul class="sidebar-menu">
-			<li class="active">
-				<a href="#">
-					<i class="fa fa-dashboard"></i> <span>Dashboard</span></i>
-				</a>
+			<li ng-class="{ active: isActive('/') }">
+				<a href="#/"><i class="fa fa-dashboard"></i> <span>Home</span></i></a>
+			</li>
+			<li ng-class="{ active: isActive('/statistics') }">
+				<a href="#/statistics"><i class="fa fa-dashboard"></i> <span>Statistics</span></i></a>
 			</li>
 		</ul>
 	</section>
