--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -18,7 +18,7 @@
 				<li class="dropdown user user-menu">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 						<!-- <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
-						<span class="hidden-xs">Alexander Pierce</span>
+						<span class="hidden-xs">Alexander Pierce - Admin</span>
 						<i class="fa fa-user fa-fw"></i>
 						<span class="caret"></span>
 					</a>
