--- a/app/views/partials/sidebar.html
+++ b/app/views/partials/sidebar.html
@@ -18,9 +18,9 @@
 				</a>
 
 				<ul class="treeview-menu menu-open" style="display: block;">
-                <li><a href="#"><i class="fa fa-files-o"></i> Baranggay Clearance</a></li>
-                <li><a href="#"><i class="fa fa-files-o"></i> Baranggay Business Clearance</a></li>
-                <li><a href="#"><i class="fa fa-files-o"></i> Certificate of Closure</a></li>
+                <li><a href="#"><i class="fa fa-angle-right"></i> Baranggay Clearance</a></li>
+                <li><a href="#"><i class="fa fa-angle-right"></i> Baranggay Business Clearance</a></li>
+                <li><a href="#"><i class="fa fa-angle-right"></i> Certificate of Closure</a></li>
               </ul>
 
 			</li>
