Create - Front end (Unfinished)

--- a/app/views/partials/sidebar.html
+++ b/app/views/partials/sidebar.html
@@ -5,10 +5,10 @@
 		<!-- sidebar menu: : style can be found in sidebar.less -->
 		<ul class="sidebar-menu">
 			<li ng-class="{ active: isActive('/') }">
-				<a href="#/"><i class="fa fa-dashboard"></i> <span>Home</span></i></a>
+				<a ui-sref="home"><i class="fa fa-dashboard"></i> <span>Home</span></i></a>
 			</li>
 			<li ng-class="{ active: isActive('/persons') }">
-				<a href="#/persons"><i class="fa fa-users"></i> <span>Persons</span></i></a>
+				<a ui-sref="census"><i class="fa fa-users"></i> <span>Census</span></i></a>
 			</li>
 
 			<li class="treeview active">
