--- a/app/views/new-record.html
+++ b/app/views/new-record.html
@@ -224,11 +224,11 @@
                                     <select class="form-control" ng-model="person.educationalAttainment">
                                         <option>Elementary Graduate</option>
                                         <option>Elementary Undergraduate</option>
-                                        <option>High School Graduatee</option>
+                                        <option>High School Graduate</option>
                                         <option>College Graduate</option>
-                                        <option>College Undergraduat</option>
-                                        <option>Vocationa</option>
-                                        <option>No Formal Educatio</option>
+                                        <option>College Undergraduate</option>
+                                        <option>Vocational</option>
+                                        <option>No Formal Education</option>
                                         <option>Post Graduate</option>
                                     </select>
                                     <p>{{person.educationalAttainment}}</p>
